--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     # Docker image selected.
     docker:
-      - image: 'kelsus/circleci-node-6.10:1.0'
+      - image: '8.11-stretch'
     # Setup the ENV VARIABLES used in the  consequent steps. 
     environment:    
       # The Service Name must be the same you have in your package.json, Dockerfile &
