`npm ci` doesn't work with current dependencies. Moving to yarn.

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "test": "./node_modules/karma/bin/karma start --verbose --single-run",
     "test:watch": "./node_modules/karma/bin/karma start --no-single-run --auto-watch",
     "deploy": "npm version patch --message \"Deployment version %s [skip ci]\" && npm publish",
-    "preversion": "npm ci && npm run test && npm run lint",
-    "version": "npm run build",
+    "preversion": "yarn && yarn run test && yarn run lint",
+    "version": "yarn run build",
     "postversion": "git push && git push --tags"
   },
   "repository": {
