--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "./node_modules/karma/bin/karma start --verbose --single-run",
     "test:watch": "./node_modules/karma/bin/karma start --no-single-run --auto-watch",
     "deploy": "npm version patch --message \"Deployment version %s [skip ci]\" && npm publish",
-    "preversion": "yarn && yarn run test && yarn run lint",
+    "preversion": "yarn && yarn run test",
     "version": "yarn run build",
     "postversion": "git push && git push --tags"
   },
