--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "formiojs",
+  "name": "@kelsus/formiojs",
   "version": "2.30.3",
   "description": "Common js library for client side interaction with <form.io>",
   "main": "lib/index.js",
