Giving sudo permission

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
           command: curl -L -o google-chrome.deb https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
       - run:
           name: Depackage Chrome
-          command: sudo dpkg -i google-chrome.deb
+          command: sudo dpkg -i google-chrome.deb && sudo apt-get install -f
       - run: 
           name: Config Chrome
           command: sudo sed -i 's|HERE/chrome\"|HERE/chrome\" --disable-setuid-sandbox|g' /opt/google/chrome/google-chrome
