All in one step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,17 +27,14 @@ jobs:
           name: Allow access to private npm.
           command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > .npmrc
       - run:
-          name: Update container
-          command: sudo apt-get update
-      - run:
-          name: Download Chrome
-          command: curl -L -o google-chrome.deb https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-      - run:
-          name: Depackage Chrome
-          command: sudo dpkg -i google-chrome.deb && sudo apt-get install -f
-      - run: 
-          name: Config Chrome
-          command: sudo sed -i 's|HERE/chrome\"|HERE/chrome\" --disable-setuid-sandbox|g' /opt/google/chrome/google-chrome
+          name: Install Chromedriver latest version
+          command: |
+            sudo apt-get update
+            sudo apt-get install lsb-release
+            curl -L -o google-chrome.deb https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb 19
+            sudo dpkg -i google-chrome.deb
+            sudo sed -i ‘s|HERE/chrome"|HERE/chrome" --disable-setuid-sandbox|g’ /opt/google/chrome/google-chrome
+            rm google-chrome.deb
       - run:  
           name: Configure git to commit and push the tag.
           command: git config --global user.email $GIT_USER_EMAIL && git config --global user.name $GIT_USER_NAME && git branch -u origin/$CIRCLE_BRANCH
