--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,7 @@ jobs:
           name: Install Chromedriver latest version
           command: |
             sudo apt-get update
+            sudo apt-get install gconf-service
             sudo apt-get install lsb-release
             curl -L -o google-chrome.deb https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
             sudo dpkg -i google-chrome.deb
