--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     # Docker image selected.
     docker:
-      - image: 'circleci/8.11.1-browsers'
+      - image: 'circleci/node:8.11.1-stretch-browsers'
     # Setup the ENV VARIABLES used in the  consequent steps. 
     environment:    
       # The Service Name must be the same you have in your package.json, Dockerfile &
