NPM install step added. (previously using yarn)

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test": "NODE_OPTIONS=\"--max-old-space-size=4096\" karma start --verbose --single-run",
     "test:watch": "NODE_OPTIONS=\"--max-old-space-size=4096\" karma start --no-single-run --auto-watch",
     "deploy": "npm version major --message \"Deployment version %s [skip ci]\" && npm publish",
-    "preversion": "npm && npm run test",
+    "preversion": "npm i && npm run test",
     "version": "npm run build",
     "postversion": "git push && git push --tags"
   },
