Enable cache for node_modules. Moved to npm ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,10 @@
-# Circle CI 2.0 Especification
 version: 2
 jobs:
   build:
-    # Docker image selected.
     docker:
-      - image: 'circleci/node:8.11.1-stretch-browsers'
-    # Setup the ENV VARIABLES used in the  consequent steps. 
+      - image: circleci/node:8-browsers
+        environment:
+            CHROME_BIN: "/usr/bin/google-chrome"
     environment:    
       # The Service Name must be the same you have in your package.json, Dockerfile &
       # docker-compose.yml.
@@ -17,12 +16,16 @@ jobs:
       only:
         - kelsus/publish
     steps:
-      # Setup enviroment on Circle CI. This enable the support for docker-compose.
-      # - setup_remote_docker
-      # Enables a mode of the shell where all executed commands are printed to the terminal.
-      - run: set -x
-      # Checking out the project from the repository.
       - checkout
+      - restore_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
+      - run:
+          name: Install npm
+          command: npm ci
+      - save_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
+          paths:
+            - node_modules
       - run:
           name: Allow access to private npm.
           command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > .npmrc
@@ -30,5 +33,8 @@ jobs:
           name: Configure git to commit and push the tag.
           command: git config --global user.email $GIT_USER_EMAIL && git config --global user.name $GIT_USER_NAME && git branch -u origin/$CIRCLE_BRANCH
       - deploy: 
-          name: Test, build and deploy npm package
+          name: Build and deploy npm package
           command: npm run deploy
+      - store_artifacts:
+          path: test-results.xml
+          prefix: tests
