--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "formiojs",
+  "name": "@kelsus/formiojs",
   "version": "3.15.6",
   "description": "Common js library for client side interaction with <form.io>",
   "main": "index.js",
@@ -19,7 +19,7 @@
     "build": "esdoc;gulp build",
     "watch": "babel -w ./src/ --out-dir ./lib/",
     "rebuild": "rm -rf node_modules;npm install;gulp build",
-    "tag": "VERSION=$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]');git add -A; git commit -m \"Build $Version\";git push origin master;git tag v$VERSION;git push origin --tags;",
+    "tag": "VERSION=$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]');git add -A; git commit -m \"Build $Version [skip ci] \";git push origin master;git tag v$VERSION;git push origin --tags;",
     "publish": "npm test;gulp build;npm run tag;npm publish lib;",
     "lint": "gulp eslint",
     "serve": "jekyll serve --config _config.yml,_config.dev.yml",
