--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "formiojs",
+  "name": "@kelsus/formiojs",
   "version": "",
   "description": "Common js library for client side interaction with <form.io>",
   "main": "index.js",
